@@ -197,6 +197,10 @@ const char MissingNullTerminator::MSG[] = "missing null terminator: ";
 
 const char SSL_Exception::MSG[] = "SSL Exception ";
 
+const char InvalidAuthHeader::MSG[] = "Invalid Authorization header";
+
+const char InvalidAuthType::MSG[] = "Invalid Authentication type";
+
 ////////////////////////////////////////////////////////////////////////////////
 //
 // CIMException
