@@ -762,6 +762,24 @@ public:
        : Exception(MSG + message) { }
 };
 
+class PEGASUS_COMMON_LINKAGE InvalidAuthHeader: public Exception
+{
+public:
+
+    static const char MSG[];
+
+    InvalidAuthHeader() : Exception(MSG) { }
+};
+
+class PEGASUS_COMMON_LINKAGE InvalidAuthType: public Exception
+{
+public:
+
+    static const char MSG[];
+
+    InvalidAuthType() : Exception(MSG) { }
+};
+
 PEGASUS_COMMON_LINKAGE void ThrowUnitializedHandle();
 
 PEGASUS_NAMESPACE_END
